--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ffmpeg-next = '5.1.1'
-fastrand = "1.9.0"
+ffmpeg-next = "8.0.0"
+fastrand = "2.3.0"
 
-wgpu = "0.15.1"
-tokio = { version = "1.25.0", features = ["rt", "macros"] }
+wgpu = "27.0.1"
+tokio = { version = "1.48.0", features = ["rt", "macros"] }
 
 [profile.release]
 debug = true
