--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ffmpeg-next = '*'
-fastrand = "*"
+ffmpeg-next = '5.1.1'
+fastrand = "1.9.0"
 
-wgpu = "*"
+wgpu = "0.15.1"
 tokio = { version = "1.25.0", features = ["rt", "macros"] }
 
 [profile.release]
