--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,7 @@ fastrand = "2.3.0"
 wgpu = "27.0.1"
 tokio = { version = "1.48.0", features = ["rt", "macros"] }
 
+time = "0.3.25"
+
 [profile.release]
 debug = true
