--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,7 @@ edition = "2021"
 
 [dependencies]
 ffmpeg-next = '*'
-rand = "*"
-
-
-[target.x86_64-unknown-linux-gnu]
-linker = "/usr/bin/clang"
-rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
+fastrand = "*"
 
 [profile.release]
 debug = true
