--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ fastrand = "2.3.0"
 
 wgpu = "27.0.1"
 tokio = { version = "1.48.0", features = ["rt", "macros"] }
+clap = { version = "4.5.53", features = ["derive"] }
 
 [profile.release]
 debug = true
